# sei

./: .gitignore  Cargo.toml  Containerfile  README.md  build.sh  test-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
scripts/: install.sh  update-repo.sh
src/: app.rs  keyring.rs  main.rs  ui.rs
